changes class names

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="main-card">
-        <div class="image">
+        <div class="image-container">
             <img class="mainImg" src="./assets/img/image-equilibrium.jpg" alt="">
             <div>
                 <img class="icon" src="./assets/icon/icon-view.svg" alt="">
@@ -23,11 +23,11 @@
             Our Equilibrium collection promotes balance and calm.
         </p>
         <div class="etherium">
-            <div class="left">
+            <div class="left-flex">
                 <img class="icon-etherium" src="./assets/icon/icon-ethereum.svg" alt="">
                 <p class="etherium-txt"> 0.041 ETH</p>
             </div>
-            <div class="right">
+            <div class="right-flex">
                 <img class="icon-clock" src="./assets/icon/icon-clock.svg" alt="">
                 <p class="days-3"> 
                     3 days left
